methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:11: error: expected class or object definition
def makeV(c: Color) {
^MethodsPicture:27: error: Unmatched closing brace '}' ignored here
}
^