methods.picture.MethodsPicture.scala.code
override def run() {
  forward();forward();
  makeV(Color.YELLOW);
  forward();forward();
  left();
}
  
  
}

def makeV(c: Color) {
  setBrushColor(c)
  brushDown();
  brushUp();
  forward();
  left();
  forward();
  brushDown();
  brushUp();
  backward();
  right();
  forward();
  brushDown();
  brushUp();
}